# crubit

./: CMakeLists.txt  README.md  debian-build  runbuild
bazel/: llvm.bzl
common/: CMakeLists.txt  status_macros.h
crates/: Cargo.toml
crates/ffi_types/: Cargo.toml
crates/ir/: Cargo.toml
crates/src_code_gen/: Cargo.toml
crates/token_stream_printer/: Cargo.toml
lifetime_annotations/: CMakeLists.txt
rs_bindings_from_cc/: CMakeLists.txt  Cargo.toml  ir.h
rs_bindings_from_cc/src_code_gen/: Cargo.toml
