[package]
name = "src_code_gen"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.56"
ffi_types = { path = "../ffi_types" }
ir = { path = "../ir" }
itertools = "0.9.0"
proc-macro2 = "1.0.37"
quote = "1.0.17"
serde_json = "1.0.64"
syn = { version = "1.0.91", features = ["extra-traits" ] }
token_stream_printer = { path = "../token_stream_printer" }
